# montana-presence

./: .bench_10K  .bench_1K  .gitignore  .nojekyll  .sync_test  AUDIT_PROMPT.md  Adonis_ReputationModel.md  CLAUDE MONTANA.md  CLAUDE.md  Install Montana Presence.command  LICENSE  MONTANA_CONTEXT.md  Montana_v4.2.md  Montana_v4.3.md  PANTHEON.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  Time_v1.0.md  Time_v3.0.md  adonis.py  build.sh  consensus.py  crypto.py  dashboard.py  engine.py  install.sh  metatron.py  network.py  node.py  pantheon_dashboard.py  pot.py  requirements.txt  vdf_fast.py
ATC v10/Layer 3+ Montana/: MONTANA_ATC_MAPPING.md  MONTANA_TECHNICAL_SPECIFICATION.md  README.md  WHITEPAPER.md
ATC v7/: Asymptotic_Trust_Consensus.docx  Asymptotic_Trust_Consensus.md  Asymptotic_Trust_Consensus.pages  Asymptotic_Trust_Consensus_TECH_SPECIFICATION.md  requirements.txt  setup.py
ATC v7/atc/: __init__.py  errors.py  (+1 more)
ATC v7/rust/randomx/: Cargo.toml
ATC v7/rust/randomx/src/: lib.rs
ATC v7/rust/winterfell_stark/: Cargo.toml
ATC v7/rust/winterfell_stark/src/: lib.rs
ATC v8/: EVALUATION_QUICK_REFERENCE.md  HYPERCRITICISM_PROOF.md  RELEASE_v2.1.md  layer_minus_1.md  layer_minus_1_verified.md
Montana/: MONTANA_ATC_MAPPING.md  MONTANA_TECHNICAL_SPECIFICATION.md  MONTANA_WHITEPAPER.md  Montana.docx  Montana.pages  README.md  TECHNICAL_SPEC.md  WHITEPAPER.md  montana.tex  requirements.txt
Montana ACP/: AUDIT_REPORT.md  BUILD_STATUS.md  MONTANA.md  PHASE_2_PLAN.md  channel_reader.session
Montana ACP/montana/: Cargo.toml
Montana ACP/montana/src/: consensus.rs  db.rs  engine.rs  finality.rs  finality_new.rs  fork_choice.rs  lib.rs  main.rs  merkle.rs  types.rs
Montana ACP/montana/src/net/: bootstrap.rs  hardcoded_identity.rs  noise.rs  protocol.rs  startup.rs  verification.rs
Montana ACP/montana/tests/: consensus_test.rs  integration_test.rs  net_test.rs
PoT v1-5/: Montana_v4.2.md  install.sh  metatron.py  pot.py
PoT v1-5/winterfell_stark/: Cargo.toml  build.sh
PoT v1-5/winterfell_stark/src/: lib.rs
PoT v1-6/: .gitignore  Montana_v3.1.md  Montana_v4.3.md  README.md  ROADMAP.md  config.py  node.py  requirements.txt
PoT v1-6/rust-core/: Cargo.toml
PoT v1-6/rust-core/src/: python.rs
PoT v1-6/rust-core/src/consensus/: chain.rs  leader.rs  mod.rs  validator.rs
PoT v1-6/rust-core/src/crypto/: vdf.rs
PoT v1-6/rust-core/src/network/: peer.rs  protocol.rs
PoT v1-6/rust-core/src/privacy/: mod.rs
PoT v6/: PROOF_OF_TIME_v6_TECHNICAL_SPECIFICATION.md  Proof_of_Time_v6.docx  setup.py
PoT v6/rust/winterfell_stark/: Cargo.toml
PoT v6/rust/winterfell_stark/src/: lib.rs  shake256_air.rs
audits/: AUDIT_PROMPT.md
docs/: ProofOfTime_v2.0.md  Time_v2.0.md  altstore-source.json  app.html  contracts.html  index.html  install-iphone.html  install-mac-dmg.html  install-mac-pkg.html  install-terminal.html  install.html  install.sh  junona.html  manifest.plist  presence.html  privacy.html  terms.html  wallet.html
example_data/: cognitive_keys.json
montana_stream_v2/: audit_v4.py
pantheon/: __init__.py
src/: CameraManager.swift  Entitlements.plist  Info.plist  MenuBarView.swift  MontanaAPIClient.swift  MontanaPresenceApp.swift  PresenceEngine.swift  SettingsView.swift
templates/: MONTANA_STYLE.md  RELEASE_RULES.md  pdf_style.css
tests/: test_dag.py  test_fuzz.py  test_integration.py  test_security_proofs.py  test_stress.py
Монтана_Montana_蒙大拿/: DEPLOYMENT_STATUS.md  DISNEY_STRATEGY_ANALYSIS.md  GOSPEL_SPECIFICATION.md  WEBSITE_ENHANCEMENTS_COMPLETE.md
Ничто_Nothing_无/: CONTINUE_PROMPT.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/: Cargo.toml
Ничто_Nothing_无/Монтана_Montana_蒙大拿/en_English_英语/: 167_time.md  169_singularity.md  170_gamechanger.md  171_phenomenon.md  174_flow_piter.md  176_sovanaglobus_anxieties.md  177_film.md  178_surrender.md  COGNITIVE_GENESIS_2026-01-09.md  SUMMARY.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/en_English_英语/cognitive/: COGNITIVE_WHITEPAPER.md  Cargo.toml
Ничто_Nothing_无/Монтана_Montana_蒙大拿/en_English_英语/cognitive/src/: lib.rs
Ничто_Nothing_无/Монтана_Montana_蒙大拿/en_English_英语/philosophy/: Cargo.toml  PHILOSOPHY_WHITEPAPER.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/en_English_英语/philosophy/src/: lib.rs
Ничто_Nothing_无/Монтана_Montana_蒙大拿/ru_Russian_俄语/: 176_сованаглобус_тревоги.md  178_капитуляция.md  181_день3_юнона.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/ru_Russian_俄语/economics/: Cargo.toml  金元_WHITEPAPER.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/ru_Russian_俄语/network/: Cargo.toml  P2P_WHITEPAPER.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/ru_Russian_俄语/сеть/: Cargo.toml  P2P_WHITEPAPER.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/ru_Russian_俄语/сеть/src/: lib.rs
Ничто_Nothing_无/Монтана_Montana_蒙大拿/ru_Russian_俄语/экономика/: Cargo.toml  金元_WHITEPAPER.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/ru_Russian_俄语/экономика/src/: lib.rs
Ничто_Nothing_无/Монтана_Montana_蒙大拿/zh_Chinese_中文/: 166_模拟.md  167_时间.md  170_改变规则.md  172_爱.md  173_羞辱.md  176_索瓦纳格洛布斯_焦虑.md  178_投降.md  180_第二天.md  摘要.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/zh_Chinese_中文/acp/: ACP_白皮书.md  Cargo.toml
Ничто_Nothing_无/Монтана_Montana_蒙大拿/zh_Chinese_中文/crypto/src/: lib.rs
Ничто_Nothing_无/Монтана_Montana_蒙大拿/zh_Chinese_中文/加密/: Cargo.toml  加密_白皮书.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/zh_Chinese_中文/协议/: ACP_白皮书.md  Cargo.toml
Ничто_Nothing_无/Монтана_Montana_蒙大拿/zh_Chinese_中文/协议/src/: lib.rs
Ничто_Nothing_无/Монтана_Montana_蒙大拿/Генезис_Genesis_创世/: COGNITIVE_GENESIS_2026-01-09.md  GENESIS_SIGNATURE.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/Совет_Council_理事会/: ADVERSARY_BENCHMARK_PROMPT.md  CHAIRMAN_BENCHMARK_PROMPT.md  COUNCIL_BENCHMARK_REGISTRY.md  OBSERVER_PROTOCOL.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/Совет_Council_理事会/Anthropic/: eclipse_attack_07.01.2026_17:00.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/Совет_Council_理事会/doc/: COGNITIVE_MARKERS.md  COUNCIL_RULES.md
Ничто_Nothing_无/Монтана_Montana_蒙大拿/Совет_Council_理事会/thoughts/: claude_opus_4.5_thoughts.md
Оригинальный бот/: j3_463.py  j3_statbot_120.py  start_j3_statbot_120.sh
金元Ɉ/: «178.  金元Ɉ - Сдайся.md
(+1589 files in other folders)
