[package]
name = "montana"
version = "0.9.0"
edition = "2024"
authors = ["Alejandro Montana"]
description = "Montana: Atemporal Coordinate Presence — Network Protocol"
license = "MIT"
repository = "https://github.com/afgrouptime/montana"

[lib]
name = "montana"
path = "src/lib.rs"

[[bin]]
name = "montana"
path = "src/main.rs"

[[bin]]
name = "attacker"
path = "src/bin/attacker.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "genesis_sign"
path = "src/bin/genesis_sign.rs"

[dependencies]
# Crypto (post-quantum)
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"       # ML-KEM-768 (Kyber)
pqcrypto-traits = "0.3"
sha3 = "0.10"

# Crypto (classical + hybrid)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"

# Storage
sled = "0.34"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
# SECURITY: postcard for network (VarInt, safe), bincode for local storage only
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }  # Network: VarInt prevents OOM
bincode = "1.3"  # Local storage + hashing only. NEVER for network deserialization!

# Utils
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
siphasher = "1.0"

[[test]]
name = "net_test"
path = "tests/net_test.rs"
harness = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
