[package]
name = "winterfell_stark"
version = "0.1.0"
edition = "2021"
description = "STARK proof generation for SHAKE256 VDF - Proof of Time"
authors = ["Proof of Time Team"]
license = "MIT"

[lib]
name = "winterfell_stark"
crate-type = ["cdylib"]

[dependencies]
# Winterfell STARK prover (audited by NCC Group and Trail of Bits)
winterfell = "0.9"
winter-air = "0.9"
winter-crypto = "0.9"
winter-math = "0.9"
winter-utils = "0.9"

# SHA3/SHAKE256 implementation
sha3 = "0.10"

# Python bindings via PyO3
pyo3 = { version = "0.20", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
