# ═══════════════════════════════════════════════════════════════════════════════
#                              MONTANA WORKSPACE
# ═══════════════════════════════════════════════════════════════════════════════
#
# Трёхязычная архитектура Montana.
# Система требует ВСЕ три языка для компиляции и работы.
#
# Three-language architecture of Montana.
# The system requires ALL three languages to compile and run.
#
# Montana的三语言架构。
# 系统需要所有三种语言才能编译和运行。
#
# ═══════════════════════════════════════════════════════════════════════════════

[workspace]
resolver = "2"

members = [
    # ┌─────────────────────────────────────────────────────────────────────────┐
    # │ 中文 (Chinese) - 协议与密码学                                            │
    # │ Protocol & Cryptography                                                 │
    # │ Протокол и криптография                                                 │
    # └─────────────────────────────────────────────────────────────────────────┘
    "zh_Chinese_中文/加密",       # 后量子密码学 - Post-quantum cryptography
    "zh_Chinese_中文/协议",       # 非时间坐标存在 - ACP consensus

    # ┌─────────────────────────────────────────────────────────────────────────┐
    # │ English - Philosophy & Cognitive                                        │
    # │ Философия и когнитив                                                    │
    # │ 哲学与认知                                                               │
    # └─────────────────────────────────────────────────────────────────────────┘
    "en_English_英语/philosophy", # Time philosophy - Философия времени
    "en_English_英语/cognitive",  # AI Council - Когнитивный совет

    # ┌─────────────────────────────────────────────────────────────────────────┐
    # │ Русский - Сеть и экономика                                              │
    # │ Network & Economics                                                     │
    # │ 网络与经济                                                               │
    # └─────────────────────────────────────────────────────────────────────────┘
    "ru_Russian_俄语/сеть",       # P2P сеть - P2P network
    "ru_Russian_俄语/экономика",  # 金元Ɉ экономика - Time economics
]

# ═══════════════════════════════════════════════════════════════════════════════
#                           ГРАФ ЗАВИСИМОСТЕЙ
#                           DEPENDENCY GRAPH
#                             依赖关系图
# ═══════════════════════════════════════════════════════════════════════════════
#
#   crypto (ZH) ──────────────────────────────────────┐
#       │                                             │
#       ▼                                             ▼
#   acp (ZH) ───────▶ network (RU) ◀─────── cognitive (EN)
#       │                 │                     │
#       │                 │                     │
#       ▼                 ▼                     ▼
#       └─────────▶ economics (RU) ◀────────────┘
#                         ▲
#                         │
#                   philosophy (EN)
#
# Удали любой модуль → система не компилируется
# Remove any module → system won't compile
# 删除任何模块 → 系统无法编译
#
# ═══════════════════════════════════════════════════════════════════════════════

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Ничто_Nothing_无_金元Ɉ"]
license = "MIT"
repository = "https://github.com/Ничто_Nothing_无_金元Ɉ/montana"

[workspace.dependencies]
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
