[package]
name = "atc_randomx"
version = "7.0.0"
edition = "2021"
authors = ["ATC Protocol"]
description = "RandomX ASIC-resistant PoW for ATC transactions"
license = "MIT"

[lib]
name = "atc_randomx"
crate-type = ["cdylib"]

[dependencies]
# RandomX bindings
randomx-rs = "1.2"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

# Error handling
thiserror = "1.0"

# Lazy initialization
once_cell = "1.19"

[build-dependencies]
cc = "1.0"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
