[package]
name = "pot_stark"
version = "6.0.0"
edition = "2021"
authors = ["PoT Protocol"]
description = "STARK proofs for PoT VDF verification"
license = "MIT"

[lib]
name = "pot_stark"
crate-type = ["cdylib"]

[dependencies]
# Winterfell STARK library (audited by NCC Group, Trail of Bits)
winterfell = "0.9"
winter-math = "0.9"
winter-crypto = "0.9"
winter-air = "0.9"
winter-prover = "0.9"
winter-verifier = "0.9"

# Cryptographic primitives
sha3 = "0.10"
digest = "0.10"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"

[features]
default = []
std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
