[package]
name = "montana_network"
version = "1.0.0"
edition = "2021"
description = "P2P Сетевой модуль - Распространение присутствия"
authors = ["Ничто_Nothing_无_金元Ɉ"]
license = "MIT"

# Русские комментарии: Этот модуль обеспечивает P2P связь
# Зависит от китайского crypto и китайского acp модулей

[dependencies]
# Зависимость от китайского модуля криптографии
montana_crypto = { path = "../../zh_Chinese_中文/加密" }

# Зависимость от китайского модуля ACP
montana_acp = { path = "../../zh_Chinese_中文/协议" }

# Генератор случайных чисел для выбора пиров
rand = "0.8"
